[package]
name = "cosmos"
version = "0.1.0"
authors = ["sched_ext contributors"]
edition = "2021"
description = "CO-Scheduling Multi-resource OS for Serverless"
license = "GPL-2.0-only"

[workspace]
members = [
    ".",
    "rust/scx_cargo",
    "rust/scx_rustland_core",
    "rust/scx_stats",
    "rust/scx_stats/scx_stats_derive",
    "rust/scx_utils",
]
resolver = "2"

[dependencies]
anyhow = "1"
plain = "0.2"
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
ctrlc = { version = "3", features = ["termination"] }
libbpf-rs = "=0.26.1"
libc = "0.2"
log = "0.4"
procfs = "0.18"
serde = { version = "1", features = ["derive"] }
scx_stats = { path = "rust/scx_stats", version = "1.1.0" }
scx_stats_derive = { path = "rust/scx_stats/scx_stats_derive", version = "1.1.0" }
scx_utils = { path = "rust/scx_utils", version = "1.1.0" }
scx_rustland_core = { path = "rust/scx_rustland_core", version = "2.4.11" }
simplelog = "0.12"

[build-dependencies]
scx_cargo = { path = "rust/scx_cargo", version = "1.1.0" }
scx_rustland_core = { path = "rust/scx_rustland_core", version = "2.4.11" }

[features]
enable_backtrace = []
